--- a/package.json
+++ b/package.json
@@ -2,10 +2,14 @@
   "name": "redux-modular-fetch-middleware",
   "version": "1.0.0",
   "description": "A modular redux middleware for using fetch",
-  "main": "index.js",
+  "main": "./dist/index.js",
+  "files": [
+    "./dist"
+  ],
   "scripts": {
-    "build": "babel ./src --out-dir ./dist",
+    "build": "rimraf ./dist && babel ./src --out-dir ./dist",
     "lint": "eslint ./src ./tests",
+    "prepublish": "npm run test && npm run build",
     "test": "npm run lint && npm run unit",
     "unit": "jest --coverage"
   },
@@ -39,7 +43,8 @@
     "chance": "^1.0.16",
     "eslint": "^4.19.1",
     "eslint-config-get-off-my-lawn": "^4.0.0",
-    "jest": "^22.4.3"
+    "jest": "^22.4.3",
+    "rimraf": "^2.6.2"
   },
   "jest": {
     "coverageDirectory": "<rootDir>/.jest-coverage",
